@@ -2,6 +2,7 @@ Revision history for ExtUtils-Builder-Compiler
 
 {{$NEXT}}
           - Add correct libperl for Cygwin and Windows
+          - Fix linking loadable objects on Windows, cygwin, aix and vms
 
 0.002     2024-04-27 11:56:02+02:00 Europe/Brussels
           - Fix linker flag passing for Mac
